--- a/style.css
+++ b/style.css
@@ -197,13 +197,13 @@ nav label {
   display: none;
 }
 .item-image-1 {
-  background-image: url("image/slider-1-1.jpg");
+  background-image: url("slider-1-1.jpg");
 }
 .item-image-2 {
-  background-image: url("image/slider-1-2.jpg");
+  background-image: url("slider-1-2.jpg");
 }
 .item-image-3 {
-  background-image: url("image/slider-1-3.jpg");
+  background-image: url("slider-1-3.jpg");
 }
 .item-container {
   position: relative;
@@ -483,7 +483,7 @@ nav label {
   right: -107px;
   top: 0;
   background-color: #f6bb16;
-  background-image: url(image/about-one-shape-1.png);
+  background-image: url("about-one-shape-1.png");
   background-repeat: no-repeat;
   background-size: 35% 31%;
   width: 87px;
@@ -640,13 +640,13 @@ nav label {
   margin: auto;
 }
 .f-img-1 {
-  background-image: url("image/feature-one-hover-img-1.jpg");
+  background-image: url("feature-one-hover-img-1.jpg");
 }
 .f-img-2 {
-  background-image: url("image/feature-one-hover-img-2.jpg");
+  background-image: url("feature-one-hover-img-2.jpg");
 }
 .f-img-3 {
-  background-image: url("image/feature-one-hover-img-3.jpg");
+  background-image: url("feature-one-hover-img-3.jpg");
 }
 .full-img {
   background-size: 100% 100%;
